WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200123
[GTK] Indistinguishable overloaded callback function inspectorViewDestroyed if RemoteWebInspectorProxyGtk.cpp and WebInspectorProxyGtk.cpp are in a unified build bundle
https://bugs.webkit.org/show_bug.cgi?id=200123
Summary
[GTK] Indistinguishable overloaded callback function inspectorViewDestroyed i...
Fujii Hironori
Reported
2019-07-25 04:00:19 PDT
[GTK] Indistinguishable overloaded callback function inspectorViewDestroyed if RemoteWebInspectorProxyGtk.cpp and WebInspectorProxyGtk.cpp are in a unified build bundle If UIProcess/gtk/RemoteWebInspectorProxyGtk.cpp and UIProcess/gtk/WebInspectorProxyGtk.cpp are in a same unified build bundle, the following compilation error occurs.
> In file included from ../DependenciesGTK/Root/include/glib-2.0/gobject/gobject.h:28, > from ../DependenciesGTK/Root/include/glib-2.0/gobject/gbinding.h:29, > from ../DependenciesGTK/Root/include/glib-2.0/glib-object.h:23, > from ../DependenciesGTK/Root/include/glib-2.0/gio/gioenums.h:28, > from ../DependenciesGTK/Root/include/glib-2.0/gio/giotypes.h:28, > from ../DependenciesGTK/Root/include/glib-2.0/gio/gio.h:26, > from ../DependenciesGTK/Root/include/gtk-3.0/gdk/gdkapplaunchcontext.h:28, > from ../DependenciesGTK/Root/include/gtk-3.0/gdk/gdk.h:32, > from ../DependenciesGTK/Root/include/gtk-3.0/gtk/gtk.h:30, > from ../../Source/WebKit/UIProcess/gtk/GestureController.cpp:30, > from DerivedSources/WebKit/unified-sources/UnifiedSource-88d1702b-26.cpp:1: > ../../Source/WebKit/UIProcess/gtk/WebInspectorProxyGtk.cpp: In member function ‘WebKit::WebPageProxy* WebKit::WebInspectorProxy::platformCreateFrontendPage()’: > ../../Source/WebKit/UIProcess/gtk/WebInspectorProxyGtk.cpp:157:50: error: overloaded function with no contextual type information > g_signal_connect(m_inspectorView, "destroy", G_CALLBACK(inspectorViewDestroyed), this); > ^~~~~~~~~~ > ../../Source/WebKit/UIProcess/gtk/WebInspectorProxyGtk.cpp: In member function ‘void WebKit::WebInspectorProxy::platformCloseFrontendPageAndWindow()’: > ../../Source/WebKit/UIProcess/gtk/WebInspectorProxyGtk.cpp:279:109: error: overloaded function with no contextual type information > g_signal_handlers_disconnect_by_func(m_inspectorView, reinterpret_cast<void*>(inspectorViewDestroyed), this); > ^ > ../../Source/WebKit/UIProcess/gtk/WebInspectorProxyGtk.cpp: In member function ‘void WebKit::WebInspectorProxy::platformDetach()’: > ../../Source/WebKit/UIProcess/gtk/WebInspectorProxyGtk.cpp:423:109: error: overloaded function with no contextual type information > g_signal_handlers_disconnect_by_func(m_inspectorView, reinterpret_cast<void*>(inspectorViewDestroyed), this); > ^ > In file included from DerivedSources/WebKit/unified-sources/UnifiedSource-88d1702b-26.cpp:9: > ../../Source/WebKit/UIProcess/gtk/WebInspectorProxyGtk.cpp: At global scope: > ../../Source/WebKit/UIProcess/gtk/WebInspectorProxyGtk.cpp:53:13: warning: ‘void WebKit::inspectorViewDestroyed(GtkWidget*, gpointer)’ defined but not used [-Wunused-function] > static void inspectorViewDestroyed(GtkWidget*, gpointer userData) > ^~~~~~~~~~~~~~~~~~~~~~
Attachments
Patch
(2.41 KB, patch)
2019-07-25 04:02 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2019-07-25 04:02:07 PDT
Created
attachment 374886
[details]
Patch
Fujii Hironori
Comment 2
2019-07-25 18:44:03 PDT
Comment on
attachment 374886
[details]
Patch Clearing flags on attachment: 374886 Committed
r247852
: <
https://trac.webkit.org/changeset/247852
>
Fujii Hironori
Comment 3
2019-07-25 18:44:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug