[GTK] Indistinguishable overloaded callback function inspectorViewDestroyed if RemoteWebInspectorProxyGtk.cpp and WebInspectorProxyGtk.cpp are in a unified build bundle https://bugs.webkit.org/show_bug.cgi?id=200123

Patch by Fujii Hironori <fujii.hironori@gmail.com> on 2019-07-25
Reviewed by Carlos Garcia Campos.

* UIProcess/gtk/RemoteWebInspectorProxyGtk.cpp:
(WebKit::remoteInspectorViewDestroyed): Added.
(WebKit::RemoteWebInspectorProxy::platformCreateFrontendPageAndWindow):
(WebKit::inspectorViewDestroyed): Deleted.
Renamed inspectorViewDestroyed to remoteInspectorViewDestroyed.

Canonical link: https://commits.webkit.org/213972@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247852 268f45cc-cd09-0410-ab3c-d52691b4dbfc